Alignment fix for consistency

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -471,6 +471,7 @@ form .actions {
   display: inline-block;
   vertical-align: middle;
   width: auto;
+  height: auto;
   text-align: left;
 }
 
